# pytest-time

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .yamlfmt.yaml  .yamllint.yaml  HACKING.rst  Makefile  README.rst  pyproject.toml  tox.ini
.github/: release-drafter.yml  renovate.json
.github/workflows/: check-renovate.yaml  release-drafter.yaml  release.yaml  tests.yaml
docs/: Makefile  conf.py  index.rst
docs/reference/: index.rst  instant_sleep.rst  mock_time.rst  real_time.rst
docs/release-notes/: 0.5.rst  index.rst
pytester/: __init__.py  test_instant_sleep.py  test_mock_instant_sleep.py  test_mock_time.py
src/pytest_time/: __init__.py  conftest.py  fake_time.py  instant_sleep.py  mock_time.py  real_time.py  wrap_time.py
tests/: __init__.py  conftest.py
tests/integration/: test_instant_sleep.py  test_with_pytester.py
tests/unit/: test_fake_time.py  test_instant_sleep.py  test_mock_time.py
